# create-monorepo

./: .gitignore  README.md  main.py  pyproject.toml
backend/: alembic_env.py  base.py  env_example.py  main.py  pyproject.py  readme_backend.py  readme_db.py
create_monorepo/: main.py
create_monorepo/templates/backend/: bucket.py  config.py  db_init.py  main.py  profile_router.py  profiles_model.py  readme_backend.py  readme_db.py  session.py
create_monorepo/templates/frontend/: api_index.py  login_form.py  profiles_fe_api.py  profiles_fe_api_types.py  use_auth.py
frontend/: env_local_example.py  eslint_config.py  layout_content.py  login_page.py  react_query_provider.py  supabase_client.py
root/: gitignore.py  vscode_settings.py
templates/frontend/: login_form.py  prettier_config.py  use_auth.py
templates/root/: readme_root.py
